--- a/writeup/square_games.tex
+++ b/writeup/square_games.tex
@@ -11,11 +11,11 @@
 	\definecolor{mypurple}{RGB}{255, 153, 255}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 	
-    \rput(1.,-5){\LARGE {\bf Find:}}    
-	\rput(6.25, -5){\LARGE $\text{argmax}_{j} ~I\left(\left.{\bf y}^{(+)}, {\bf M^{(j)}_{prp}} \right| {\bf M_{gvn}}\right)$}
+%    \rput(1.,-5){\LARGE {\bf Find:}}    
+%	\rput(6.25, -5){\LARGE $\text{argmax}_{j} ~I\left(\left.{\bf y}^{(+)}, {\bf M^{(j)}_{prp}} \right| {\bf M_{gvn}}\right)$}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-    \rput(1.,4){\LARGE ${\bf M^{(j)}_{prp}}$ {\bf :}}    
+    \rput(1.,4){\LARGE ${\bf M^{(j)}_{t}}$ {\bf :}}    
 
     \psframe[linecolor=black,fillstyle=solid,fillcolor=mypurple](2.25,2)(3.25,6) % Black border
     \rput(2.75,4){${\bf y}^{(+)}$}
@@ -42,7 +42,7 @@
     \rput(8.75,-.5){${\bf y}^{(-)}_{l_{k}+j}$}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-	\rput(1,10){\LARGE ${\bf M_{gvn}}$ {\bf :}}    
+	\rput(1,10){\LARGE ${\bf M_{c}}$ {\bf :}}    
 
     \psframe[linecolor=black,fillstyle=solid,fillcolor=mypurple](2.25,8)(3.25,12) % Black border
     \rput(2.75,10){${\bf y}^{(+)}$}
