--- a/writeup/er_dmd.tex
+++ b/writeup/er_dmd.tex
@@ -68,9 +68,9 @@ Equation free model development has enjoyed a multi-year stretch of continued pr
 
 Likewise, in order to better address the modelling of multiscale data, delay structured DMD models reminiscent of either ARIMA or Takens embedding models have also been explored; see \cite{arbabi, clainche, duraisamy, champion2, kutz4, curtis_dldmd}.  Across these works, it has become clear that the success of DMD when used to generate models which can be time stepped forward from some set of initial data depends upon finding accurate multi-step Koopman like models for a given time series.  However, much of the existing literature has in practice focused on data coming from periodic and quasi-periodic attractors, which as is proved in \cite{duraisamy}, can be exactly reconstructed using relatively straightforward lagged DMD models.  While \cite{arbabi} shows that Hankel-DMD methods should provide exact determination of the affiliated Koopman operator in ergodic systems, this is not necessarily a practical result.  This issue is partially addressed in \cite{curtis_dldmd}, which coupled an adaptive Hankel DMD method to an autencoding neural network strategy to discover meaningful observables from chaotic time series.  However, this method did not provide a fully automatic way to determine the updating of the Takens style embeddings needed to make the method successful.  Thus, discovering methods which build better lagged DMD models has a number of potential downstream applications.  
 
-To improve then on this situation, we treat discovering lagged DMD models as a question of optimal model discovery.  While there are a plethora of approaches to this problem, the one that we find most impactful is from \cite{bollt2}, which treats the problem of finding the most likely model as the one which is best at describing the flow of information between time scales.  Information flow is measured here via a generalization of transfer entropy \cite{schreiber}, called {\it causation entropy} \cite{bollt}, coupled with an algorithmic approach to model discovery called {\it entropic regression} \cite{bollt2}, making our approach one which seeks to find those models which provide the most information about evolving time series.  In some sense then, this work is also a natural generaliztion of the Aikake Information Criteria \cite{aikake} used to develop parsimonius ARIMA models in statistics.  
+To improve then on this situation, we treat discovering lagged DMD models as a question of optimal model discovery.  While there are a plethora of approaches to this problem, the one that we find most impactful is from \cite{bollt2}, which treats the problem of finding the most likely model as the one which is best at describing the flow of information between time scales.  Information flow is measured here via a generalization of transfer entropy \cite{schreiber}, called {\it causation entropy} \cite{bollt}, coupled with an algorithmic approach to model discovery called {\it entropic regression} \cite{bollt2}, making our approach one which seeks to find those models which provide the most information about evolving time series.  Our work then is related to methods which build inferential causal networks in multidimensional time series \cite{idtxl2}, and it is also a natural compliment of \cite{lozano}, which uses similar concepts to transfer entropy to identify causal coupling across scales in turbulent fluids.  
 
-As we show, our method, which we dub the entropic-regression-dynamic-mode decomposition (ERDMD), is able to discover non-uniform lagged DMD models which provide accurate time-stepping schemes from data coming from a variety of chaotic attractors.  This realizes the ambition of the results in \cite{arbabi} while pointing towards future improvements in the algorithm presented in \cite{curtis_dldmd}.  That said, we also find limitations by way of our results on the Kuramoto--Sivashinsky equation, which shows even optimally lagged DMD models struggle in of themselves to accurately reconstruct higher dimensional strange attractors.  Future work in this direction by way of coupling our current method with the work of \cite{curtis_dldmd} should address this shortcoming though.  Likewise, as noted in \cite{bollt2}, a major motivation for using information theory in model discovery is that it supports robust model discovery from noisy data, which is also a natural topic of future inquiry.  
+As we show, our method, which we dub the entropic-regression-dynamic-mode decomposition (ERDMD), is able to discover non-uniform lagged DMD models which provide accurate time-stepping schemes from data coming from a variety of chaotic attractors.  The ability of our method to generate non-uniform lagged models echoes the work in \cite{vlachos, faes}, which shows non-uniform embeddings of time series lead to more information theoretically rich models.  In all then, the present work realizes the ambition of the results in \cite{arbabi} while pointing towards future improvements in the algorithm presented in \cite{curtis_dldmd}.  That said, we also find limitations by way of our results on the Kuramoto--Sivashinsky equation, which shows even optimally lagged DMD models struggle in of themselves to accurately reconstruct higher dimensional strange attractors.  Future work in this direction by way of coupling our current method with the work of \cite{curtis_dldmd} should address this shortcoming though.  Likewise, as noted in \cite{bollt2}, a major motivation for using information theory in model discovery is that it supports robust model discovery from noisy data, which is also a natural topic of future inquiry.  
 
 The structure of the paper is as follows.  In Section 2, we provide a brief introduction to higher order DMD and entropic regression.  We then present our central algorithm, the ERDMD method.  In Section 3, we present the results of our method across three different chaotic dynamical systems.  Finally in Section 4, we provide a discussion of the method and further elaborate on future directions which would follow from the present work.   
 
