--- a/writeup/ionosphere_bib.bib
+++ b/writeup/ionosphere_bib.bib
@@ -335,3 +335,39 @@ number = {2},
 pages = {886-917},
 year = 2020
 }
+
+@article{vlachos,
+author={Vlachos, Ioannis and Kugiumtzis, Dimitris},
+title={Nonuniform state-space reconstruction and coupling detection},
+journal={Phys. Rev. E},
+volume={82},
+pages={016207},
+year=2010
+}
+
+@article{faes,
+author={Faes, Luca and Nollo, Giandomenico and Porto, Alberto},
+title={Information-based detection of nonlinear Granger causality in mulitvariate processes via a nonuniform embedding technique},
+journal={Phys. Rev. E},
+volume={83},
+pages={051112},
+year=2011
+}
+
+@article{palus,
+author={Palu\u{s}, Milan and Krakovsk\'{a}, Anna and Jakubik, Jozef and Chvostekov\'{a}, Martina},
+title={Causality, dynamical systems and the arrow of time},
+journal={Chaos},
+volume={28},
+pages={075307},
+year=2018
+}
+
+@article{lozano,
+author={Loz\'{a}no-Duran, Adri\'{a}n and Arranz, Gonzalo},
+title={Information-theoretic formulation of dynamical systems: {C}ausality, modeling, and control},
+journal={Phys. Rev. Research},
+volume={4},
+pages={023195},
+year=2022
+}
